# anytone-emu

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: cmake-multi-platform.yml
annotation/dmr6x2uv/: channelbank.xml  codeplug.xml
cli/: CMakeLists.txt  main.cc
cmake/: DocBook.cmake  FindDocBookXSL.cmake  FindHunspell.cmake  GenerateIcons.cmake
debian/: anytone-emu-gui.dirs  anytone-emu-gui.install  anytone-emu.install  changelog  control  copyright  rules  watch
debian/upstream/: metadata
doc/: CMakeLists.txt  docbook-fo.xslt.in  radtel-protocol.md
doc/Baofeng/MD32UV/: extract.py  md-32uv-write.pcapng  protocol.md
doc/Radtel/RT4D/: radtel-protocol.md
doc/manual/: introduction.typ  manual.typ  manual.typs  manual.xml  motivation.typ  pattern.typ  references.bib
doc/manual/pattern/: fileformat.xml
installer/: Makefile
installer/config/: config.xml
lib/: CMakeLists.txt  annotation.cc  annotation.hh  anytonedevice.cc  anytonedevice.hh  anytonemodeldefinition.cc  anytonemodeldefinition.hh  anytonemodelparser.cc  anytonemodelparser.hh  anytoneprotocol.cc  anytoneprotocol.hh  codeplugannotation.cc  codeplugannotation.hh  codeplugpattern.cc  codeplugpattern.hh  codeplugpatternparser.cc  codeplugpatternparser.hh  d578uv.cc  d578uv.hh  d578uv2.cc  d578uv2.hh  d868uv.cc  d868uv.hh  d868uve.cc  d868uve.hh  d878uv.cc  d878uv.hh  d878uv2.cc  d878uv2.hh  device.cc  device.hh  deviceclassplugininterface.cc  deviceclassplugininterface.hh  djmd5.cc  djmd5.hh  djmd5x.cc  djmd5x.hh  dmr6x2uv.cc  dmr6x2uv.hh  dmr6x2uv2.cc  (+66 more)
plugins/: CMakeLists.txt
plugins/anytone/: definition.cc  definition.hh  device.cc  device.hh  deviceclass.cc  deviceclass.hh  parser.cc  parser.hh  protocol.cc  protocol.hh
plugins/md32uv/: definition.cc  definition.hh  device.cc  device.hh  deviceclass.cc  deviceclass.hh  parser.cc  parser.hh  protocol.cc
plugins/opengd77/: definition.cc  definition.hh  device.cc  device.hh  deviceclass.cc  deviceclass.hh  protocol.cc  protocol.hh
plugins/radtel/: definition.cc  definition.hh  device.cc  device.hh  deviceclass.cc  deviceclass.hh  protocol.cc
shared/: anytone-emu-gui.desktop  anytone-emu-gui.desktop.in  dictionary.json
shared/icons/dark/: index.theme
shared/icons/light/: index.theme
src/: CMakeLists.txt  aboutdialog.cc  aboutdialog.hh  aboutdialog.ui  application.cc  application.hh  blockrepeatdialog.cc  blockrepeatdialog.hh  blockrepeatdialog.ui  codeplugdialog.cc  codeplugdialog.hh  codeplugdialog.ui  d578uv.rs  d578uv2.rs  d868uve.rs  d878uv.rs  d878uv2.rs  device.rs  devicehandler.rs  djmd5.rs  djmd5x.rs  dmr6x2uv.rs  dmr6x2uv2.rs  elementdialog.cc  elementdialog.hh  elementdialog.ui  elementpatterneditor.cc  elementpatterneditor.hh  elementpatterneditor.ui  elementpatternview.cc  elementpatternview.hh  elementview.hh  enumfielddialog.cc  enumfielddialog.hh  enumfielddialog.ui  enumfieldpatternwrapper.cc  enumfieldpatternwrapper.hh  enumitemseditor.cc  enumitemseditor.hh  enumitemseditor.ui  (+96 more)
test/: CMakeLists.txt  address_test.cc  address_test.hh  annotation_test.cc  annotation_test.hh  modelparsertest.cc  modelparsertest.hh  pattern_parser_test.cc  pattern_parser_test.hh
